--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "styled-components": "^5.3.5",
     "tailwindcss": "^3.1.6"
   },
   "devDependencies": {
@@ -26,5 +27,8 @@
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.6",
     "typescript": "4.7.4"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
